objects/pepCmsAnswer__c.object
<CustomObject>
    <fields>
        <fullName>Production_RowId__c</fullName>
        <description>Used when migrating records from Production to Sandboxes. Will be blank in Production, but when inserting these records into Sandbox we insert the Id from Prd into this field. This is our logical key for setting this Record in Lookups in other objects.</description>
        <externalId>true</externalId>
        <label>Production_RowId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepActualValue__c</fullName>
        <label>Actual Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepCmsQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMS Question</label>
        <referenceTo>pepCmsQuestion__c</referenceTo>
        <relationshipLabel>Answer</relationshipLabel>
        <relationshipName>pepCmsAnswer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pepDisplayText__c</fullName>
        <label>Display Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepHasDependentQuestions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Dependent Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pepSequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CMS Answer</label>
    <listViews>
        <fullName>Answer_By_Question</fullName>
        <columns>NAME</columns>
        <columns>pepCmsQuestion__c</columns>
        <columns>pepActualValue__c</columns>
        <columns>pepDisplayText__c</columns>
        <columns>pepHasDependentQuestions__c</columns>
        <columns>pepSequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>Answer By Question</label>
    </listViews>
    <nameField>
        <label>Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Answer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>